@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v26.2.11-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-11 22:37:40, took 00:13:41, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter v26.2.12-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2026-02-12 07:26:11, took 00:12:29, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
